--- a/kenko/templates/meditation/meditate.html
+++ b/kenko/templates/meditation/meditate.html
@@ -1,7 +1,16 @@
-{{video.0}} {% comment %}Title{% endcomment %}
-<br>
-{{video.1}} {% comment %} Description {% endcomment %}
-<br>
-{% autoescape off %}
-{{video.2}}
-{% endautoescape %} {% comment %} Video Embed {% endcomment %}
+
+{% extends 'base.html' %}
+
+{% block body %}
+{% load static %}
+<div style="background-color:black;">
+    <br><br><br><br>
+    <div class="container mt-3">
+        <h1 style="color:white;">{{video.0}}</h1>
+        <h4 style="color:white;">{{video.1}}</h4>
+        {% autoescape off %}
+        {{video.2}}
+        {% endautoescape %}
+    </div>
+</div>
+{% endblock body %}
