--- a/kenko/templates/sleep-schedule/Home.html
+++ b/kenko/templates/sleep-schedule/Home.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block body %}
+
 {% load static %}
 <!DOCTYPE html>
 <html style="font-size: 16px;">
@@ -235,9 +239,11 @@
       </div>
     </section>
     
+
+{% endblock body %}
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1dc5"><div class="u-clearfix u-sheet u-sheet-1">
+    {% comment %} <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1dc5"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">kenko inc.</p>
       </div></footer>
   </body>
-</html>
+</html> {% endcomment %}
