added base html to workout files

--- a/kenko/templates/workout/advanced-workout.html
+++ b/kenko/templates/workout/advanced-workout.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block body %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -62,3 +64,4 @@ Put your feet on an elevated surface, like a bench or a step, and complete an el
 </div>
 </body>
 </html>
+    {% endblock body %}
