--- a/kenko/templates/workout/intermediate-workout.html
+++ b/kenko/templates/workout/intermediate-workout.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block body %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -87,3 +89,4 @@ The same motion is still applicable here, though. Imagine you’re sitting down 
     </div>
 </body>
 </html>
+    {% endblock body %}
