--- a/kenko/templates/workout/beginner-workout.html
+++ b/kenko/templates/workout/beginner-workout.html
@@ -1,4 +1,7 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block body %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -118,3 +121,4 @@
 </body>
 
 </html>
+    {% endblock body %}
