--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">kenko</a>
+                <a class="navbar-brand js-scroll-trigger" href="/">kenko</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -28,12 +28,23 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/sleep-schedule">Sleep</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/meditation">Meditation</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/workout/beginner-workout">Beg Workout</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/workout/intermediate-workout">Inter Workout</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/workout/advanced-workout">Adv Workout</a></li>
                     </ul>
-                </div>
+
+
+          </div>
+
             </div>
+
         </nav>
+
+
+
 
         {% block body %}{% endblock body %}
 
