--- a/static/sleepschedule/home.css
+++ b/static/sleepschedule/home.css
@@ -1,3 +1,7 @@
+.u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
   min-height: 414px;
 }
@@ -22,7 +26,11 @@
   .u-section-1 .u-text-1 {
     width: 340px;
   }
-}.u-section-2 .u-sheet-1 {
+}.u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
   min-height: 289px;
 }
 
@@ -158,7 +166,11 @@
   .u-section-3 .u-text-1 {
     width: 340px;
   }
-}.u-section-4 .u-sheet-1 {
+}.u-section-4 {
+  background-image: none;
+}
+
+.u-section-4 .u-sheet-1 {
   min-height: 737px;
 }
 
