--- a/templates/sleep-schedule/Home.html
+++ b/templates/sleep-schedule/Home.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
+
+{% block body %}
 
 <html style="font-size: 16px;">
   <head>
@@ -17,8 +19,7 @@
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
     
-    
-    
+
     
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -32,7 +33,9 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-custom-color-3 u-header u-header" id="sec-50e9"><h1 class="u-text u-title u-text-1">Maintaining a Healthy Sleep Schedule</h1></header>
+  <body class="u-body" style="background-color:#111111">
+  <div style="margin-top:5%">
+  <header class="u-clearfix u-custom-color-3 u-header u-header" id="sec-50e9"><h1 class="u-text u-title u-text-1">Maintaining a Healthy Sleep Schedule</h1></header>
     <section class="u-align-left u-clearfix u-grey-90 u-section-1" id="sec-6bde">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
@@ -239,5 +242,8 @@
         <p class="u-small-text u-text u-text-variant u-text-1">kenko inc.<br>
         </p>
       </div></footer>
+      </div>
   </body>
 </html>
+
+{% endblock body %}
